stylesheet.css
/* ... */
.header_content_right {
    display: flex;
    flex-direction: row;
    margin-left: auto;
    height: 100%;
    align-items: center;
}

.header_content_right > *{
    margin-left: 20px;
}

.header_content_right > i {
    color: var(--primary_color);
    font-size: 50px;
}

.header_content_right img {
    width: 70px;
    height: 70px;
    border-radius: 50%;
}

.header_content_right > i:hover, .header_content_right img:hover {
    transform: translateY(-4px);
    cursor: pointer;
}

.header_content_right > .searchbar {
    height: 50px;
    width: 270px;
    border-radius: 8px;
    border: 2px solid var(--details_font_color);
    color: var(--title_font_color);
    background-color: transparent;
    font-size: 18px;
    padding: 0px 12px;
}

.header_content_right > .searchbar:focus {
    border: 2px solid var(--primary_color);
}

.login_button, .register_button {
    padding: 10px 20px;
    font-size: large;
    font-weight: bold;
    text-decoration: none;
    height: 50px;
    border-radius: 8px;
    text-align: center;
    border: 3px solid var(--primary_color);
}

.login_button {
    color: var(--primary_color);
}

.header_content_right > .login_button:hover {
    background-color: var(--shadow_color);
}

.register_button {
    background-color: var(--primary_color);
    color: var(--tag_font_color);
}

.hamburger_menu_btn, .mobile_button {
    display: none;
}

.header_content_right > a:hover {
    background-color: var(--primary_complement_hover);
}

.dropdown_menu_profile {
    position: relative;
    display: inline-block;
}

.dropdown_content {
    display: none;
    position: absolute;
    margin-left: -20px;
    top: 97px;
    background-color: var(--secondary_background_color);
    box-shadow: 0px 20px 20px var(--shadow_color);
    z-index: 1;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;


    animation: growDown 300ms ease-in-out forwards;
    transform-origin: top center;
}

.profile_button_active + .dropdown_content {
    display: block;
}

.dropdown_content > a {
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.log_out_button {
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
}

.dropdown_content > a:hover {
    background-color: var(--shadow_color);
}

@keyframes growDown {
    0% {
        transform: scaleY(0);
    }
    80% {
        transform: scaleY(1.1);
    }
    100% {
        transform: scaleY(1);
    }
}
/*Header style end*/

/*Sidebar style start*/
.sidebar_container {
    display: flex;
    flex-direction: column;
    width: 20%;
}

.sidebar_description {
    width: 100%;
    border-radius: 15px;
    padding: 20px;
    margin-bottom: 30px;
    background-color: var(--secondary_background_color);
}

.sidebar_description > p {
    font-size: 18px;
    margin-top: 4px;
}

.sidebar_filter {
    width: 100%;
    border-radius: 15px;
    padding: 20px;
    position: sticky;
    top: 150px;
    background-color: var(--secondary_background_color);
}

.dropdown-button {
    display: block;
    height: 60px;
    width: 100%;
    text-align: left;
    font-size: 20px;
    color: var(--text_font_color);
    background: none;
    border: none;
    border-bottom: 1px solid var(--details_color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    padding: 10px;
    border-radius: 4px;
}

.dropdown-button:hover {
    background-color: var(--filter_hover_color);
}

.dropdown-button-icon {
    width: 20px;
    height: 20px;
    fill: var(--details_font_color);
    fill: var(--primary_color);
}

.dropdown {
    padding-top: 12px;
    display: none;
}

.dropdown label {
    display: block;
    height: 30px;
    margin-left: 20px;
    font-size: 16px;
    color: var(--text_font_color);
}

.dropdown input {
    margin-right: 4px;
    vertical-align: bottom;
}

input[type="checkbox"], input[type="radio"] {
    width: 20px;
    height: 20px;
    border-radius: 4px;
    accent-color: var(--secondary_background_color);
}

input[type="checkbox"]:checked, input[type="radio"] {
    accent-color: var(--primary_complement_hover);
}

.filter-button {
    width: calc(100% - 40px);
    width: 100%;
    height: 60px;
    margin-top: 30px;
    border-radius: 8px;
    border: none;
    background-color: var(--primary_color);

    color: var(--secondary_background_color);

    font-size: 24px;
    font-weight: bold;

}

.filter-button:hover {
    background-color: var(--primary_complement_hover);
    background-color: var(--primary_complement_hover);
    cursor: pointer;
}

/*Sidebar style end*/

/*Post, comment and subcomment style start*/
.post_container {
    display: flex;
    flex-direction: column;
    border-radius: 15px;
    box-shadow: 0px 0px 20px var(--shadow_color);
    background-color: var(--secondary_background_color);
}

.comment_container, .subcomment_container {
    display: flex;
    flex-direction: column;
    padding: 30px;
    border-radius: 15px;
    box-shadow: 0px 0px 20px var(--shadow_color);
    background-color: var(--secondary_background_color);
}

.post_content_container {
    padding: 30px;
}

.post_content {
    max-height: 200px;
    overflow: hidden;

}

.post_content > p {
    word-break: break-all;
}

.comment_container {
    margin-left: auto;
    width: calc(100% - 50px);
    margin-top: 40px;
}

.subcomment_container {
    margin-left: auto;
    width: calc(100% - 100px);
    margin-top: 20px;
}

.post_title {
    font-size: xx-large;
    font-weight: bold;
    margin-bottom: 10px;
    width: 100%;
    color: var(--title_font_color);
}

.post_tag {
    display: inline-block;
    vertical-align: middle;
    margin-top: -4px;
    padding: 5px 20px;
    border-radius: 5px;
    margin-right: 20px;
    /* background-color: var(--tag_color); */

    font-size: large;
    font-weight: bold;
    color: var(--tag_font_color);
}

.tag-General {
  background-color: rgb(207, 93, 17);
}

.tag-Math {
  background-color: #2b0f6e;
}
/* ... */

